syntax = "proto3";

// protoc-gen-go 版本大于1.4.0, proto文件需要加上go_package,否则无法生成
option go_package = "./pb";

package im;

message SendMsgReq {
  int64 TargetId = 1;
  int64 FromId = 2;
  string Type = 3;
  string Media = 4;
  string Content = 5;
}

message Success{
  int64 Code = 1;
}

service im {
  rpc sendMsg(SendMsgReq) returns(Success);
}